recycling-bin/2026-04-21-repo-cleanup/tmp/generated-validation/objects/bom_lines__dll/bom_lines__dll.object-meta.xml
<CustomObject>
    <label>bom_lines</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Other</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>