recycling-bin/2026-04-21-repo-cleanup/tmp/generated-validation/objects/bom_lines__dll/fields/bom_line_id__c.field-meta.xml
<CustomField>
    <fullName>bom_line_id__c</fullName>
    <label>bom_line_id</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>bom_line_id</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>