recycling-bin/2026-04-21-repo-cleanup/tmp/generated-validation/objects/bom_lines__dll/fields/item_category__c.field-meta.xml
<CustomField>
    <fullName>item_category__c</fullName>
    <label>item_category</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>item_category</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>